# MiniScatter

./: .gitignore  CMakeLists.txt  CommandLineUse.md  INSTALLING.md  MiniScatter.cc  PyInterface.md  README.md  SWAN.md  analyzer.py  setupLCG.sh  vis.mac
ROOTclasses/: CMakeLists.txt  MiniScatter_ROOTclasses.cpp  MiniScatter_ROOTclasses.h  MiniScatter_ROOTclasses_linkdef.h
Scat_Analysis/: Foil_BeamParamScan_APL_analysis.ipynb
examples/: Compton.ipynb  DoseDeposition_unitsCheck.ipynb  DoseDepthDeposition.ipynb  Energy-scatter.ipynb  Foil_BeamParamScan.ipynb  LoadParticles.ipynb  MolliereRadius.ipynb  MultipleDetectorPlanes.ipynb  PressureScan.ipynb  SiRi DeltaE-E detector.ipynb  SimpleDemo.ipynb  ThicknessScan.ipynb  beamFile.csv
include/: AntiPHit.hh  AntiPSD.hh  DetectorConstruction.hh  EMonlyPhysicsList.hh  EdepHit.hh  EventAction.hh  FieldClasses.hh  MagnetClasses.hh  MagnetSensorWorldConstruction.hh  MiniScatterVersion.hh  MyEdepHit.hh  MyEdepSD.hh  MyMomentumHit.hh  MyTargetSD.hh  MyTrackerHit.hh  MyTrackerSD.hh  ParallelWorldConstruction.hh  PrimaryGeneratorAction.hh  RootFileWriter.hh  RunAction.hh  TargetSD.hh  TrackerHit.hh  TrackerSD.hh  TrackingAction.hh  VirtualTrackerWorldConstruction.hh  analysis.hh
scripts/: GeneralAnalysisDemo.ipynb  PressureScan.ipynb  beamParamScan.py  distScan.py  gammaFilter.mac  miniScatterDriver.py  miniScatterPlots.py  miniScatterScanner.py  quicksilver.py  verbose.mac  vis.mac
src/: AntiPHit.cc  AntiPSD.cc  DetectorConstruction.cc  EMonlyPhysicsList.cc  EdepHit.cc  EventAction.cc  G4EmUserPhysics.cc  MagnetCOLLIMATOR1.cc  MagnetCOLLIMATORHV.cc  MagnetCOLLIMATORRECT.cc  MagnetClasses.cc  MagnetHVCOLL.cc  MagnetPBW.cc  MagnetPLASMA1.cc  MagnetSHIELDEDSCINTILATOR.cc  MagnetSensorWorldConstruction.cc  MagnetTARGET.cc  MagnetTARGETR.cc  MyEdepHit.cc  MyEdepSD.cc  MyMomentumHit.cc  MyTargetSD.cc  MyTrackerHit.cc  MyTrackerSD.cc  ParallelWorldConstruction.cc  PrimaryGeneratorAction.cc  RootFileWriter.cc  RunAction.cc  TargetSD.cc  TrackerHit.cc  TrackerSD.cc  TrackingAction.cc  VirtualTrackerWorldConstruction.cc  analysis.cc  magnetCOLLIMATORRECT.cc
